Fix T44919: BGE marhutils attrs leak memory